- fixed unintended/unwanted body scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@
   --border-grey: #ccc;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
 body {
-  width: 100dvw;
   height: 100dvh;
   overflow: hidden;
   font-family: Arial, Helvetica, sans-serif;
